# albert-plugin-widgetsboxmodel

./: CMakeLists.txt  README.md
i18n/: widgetsboxmodel_de.ts  widgetsboxmodel_en.ts
src/: configwidget.cpp  configwidget.ui  frame.cpp  frame.h  inputline.cpp  inputline.h  plugin.cpp  plugin.h  resizinglist.cpp  resizinglist.h  resizingqplaintextedit.cpp  resizingqplaintextedit.h  resultslist.cpp  resultslist.h  style.cpp  style.h  stylesqueryhandler.cpp  stylesqueryhandler.h  window.cpp  window.h  windowframe.cpp  windowframe.h
styles/: Nord Dark.ini  Nord Light.ini  Solarized Dark Blue.ini  Solarized Dark Cyan.ini  Solarized Dark Green.ini  Solarized Dark Magenta.ini  Solarized Dark Orange.ini  Solarized Dark Red.ini  Solarized Dark Violet.ini  Solarized Dark Yellow.ini  Solarized Dark.ini  Solarized Light Blue.ini  Solarized Light Cyan.ini  Solarized Light Green.ini  Solarized Light Magenta.ini  Solarized Light Orange.ini  Solarized Light Red.ini  Solarized Light Violet.ini  Solarized Light Yellow.ini  Solarized Light.ini  Style.ini.template  Theme.ini.template  Ubuntu.ini
styles/base/: Solarized Dark.ini  Solarized Light.ini  Solarized.ini
